--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,11 +1,14 @@
-<h1>
+<div class="container">
+    <h1>
     Welcome to the Landing Page!
-</h1>
+    </h1>
 
-<div>
-    <p>Click Login to login to our system</p>
+
+    <p>Click Login to log in to our system</p>
     <p>OR</p>
     <button mat-raised-button color="primary" routerLink="/sign-up">
         Sign Up!
     </button>
 </div>
+
+
