--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<div class="form-container mat-elevation-z5">
+<div class="container"> <div class="form-container mat-elevation-z5">
   <h1>Sign Up a New User!</h1>
   <form [formGroup]="signUpForm" (ngSubmit)="submit()">
     <mat-form-field>
@@ -45,4 +45,5 @@
       <button type="submit" mat-raised-button color="primary">Sign Up!</button>
     </div>
   </form>
+</div>
 </div>
