--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,41 @@
-<ng-container *ngIf="user$ | async as user">
-    <h1>Welcome to the home page, {{user.displayName}}!</h1>
-</ng-container>
+<div class="container">
+    <div class="chat-list mat-elevation-z5">
+        <div class="search-input">
+            <mat-form-field>
+                <input 
+                matInput
+                 placeholder="Search for users..." 
+                 [formControl]="searchControl"
+                 [matAutocomplete]="users">
+            </mat-form-field>
+            <mat-autocomplete  #users="matAutocomplete">
+                    <mat-option *ngFor="let user of users$ | async" (click)="createChat(user)">
+                           {{ user?.displayName }} 
+                    </mat-option>
+            </mat-autocomplete>
+        </div>
+        <mat-selection-list [multiple]="false">
+            <mat-divider></mat-divider>
+                <mat-list-option *ngFor="let chat of myChats$ | async" [value]="chat.id"  >
+                    <p mat-line class="chat-title">
+                        <span class="chat-name">
+                            {{  chat.chatName }}
+                        </span>
+                        <span class="chat-date">
+                            {{ chat.lastMessageDate }}
+        
+                        </span>
+                    </p>   
+                    <p  mat-line>
+                        {{ chat.lastMessge }}
+                    </p>
+                </mat-list-option>
+                <mat-divider></mat-divider>
+            </mat-selection-list>
+    </div>
+
+  
+    <div class="messages mat-elevation-z5">
+
+    </div>
+</div>
