--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -2,3 +2,21 @@
     font-size: 1.2rem;
     margin-left: 8px;
 }
+
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center !important;
+    height: 100vh;
+    margin: 0; 
+  }
+  
+  .container {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 70vh;
+  }
