--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,3 +1,12 @@
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
+
+
 .profile-image {
   position: relative;
   width: 120px;
@@ -24,3 +33,4 @@
   display: flex;
   gap: 16px;
 }
+
