--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -14,6 +14,8 @@
     width: 85%;
     margin: 16px;
     border-radius: 16px;
+    padding: 24px;
+    background-color: rgba(0,0,0,0.1);
 }
 
 .search-input {
@@ -28,4 +30,66 @@
 .chat-date {
     font-size: 0.7rem;
     color: rgba(0,0,0,0.7);
+}
+
+.messages-header {
+    display: flex;
+    margin-bottom:  8px;
+}
+
+.messages-header > h2 {
+    margin: 0;
+}
+
+.chat-area {
+    height: calc(100vh - 270px);
+    display:flex;
+    flex-direction: column;
+    overflow: auto;
+}
+
+.chat-area > :first-child {
+    margin-top: auto;
+}
+.input-area > mat-form-field {
+    width: 100%;
+}
+
+.input-area {
+    padding-top: 16px;
+    padding-bottom: 8px;
+}
+
+.chat-bubble-container {
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+}
+
+.chat-bubble-container.sender {
+    justify-content: flex-end;
+}
+
+.chat-bubble-container.sender > .chat-bubble {
+    background-color: #c5cae9;
+}
+
+.chat-bubble {
+    background-color: white;
+    padding-top: 8px ;
+    padding-bottom: 18px;
+    padding-left: 8px;
+    padding-right: 100px;
+    margin-bottom: 16px;
+    border-radius:  8px;
+    width: flex-content;
+    position: relative
+}
+
+.chat-date {
+    position: absolute;
+    bottom: 2px;
+    right: 8px;
+    font-size: 0.7rem;
+    color: rgba(0,0,0,0.6)
 }
