--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
                     </mat-option>
             </mat-autocomplete>
         </div>
-        <mat-selection-list [multiple]="false">
+        <mat-selection-list [multiple]="false" [formControl]="chatListControl">
             <mat-divider></mat-divider>
                 <mat-list-option *ngFor="let chat of myChats$ | async" [value]="chat.id"  >
                     <p mat-line class="chat-title">
@@ -22,7 +22,7 @@
                             {{  chat.chatName }}
                         </span>
                         <span class="chat-date">
-                            {{ chat.lastMessageDate }}
+                            {{ chat.lastMessageDate | dateDisplay }}
         
                         </span>
                     </p>   
@@ -36,6 +36,36 @@
 
   
     <div class="messages mat-elevation-z5">
-
+            <div class="messagge-header" *ngIf="selectedChat$ | async as selectedChat; else noMessages ">
+                    <h2> {{ selectedChat.chatName }}</h2>
+            </div><ng-template #noMessages>
+                        <div class="messagge-header">
+                            <h2>Messages</h2>
+                        </div>
+            </ng-template>
+             <mat-divider></mat-divider>
+             <div class="chat-area">
+                <ng-container *ngIf="user$ | async as currentUser">
+                    <div *ngFor="let message of messages$ | async" 
+                            class="chat-bubble-container"
+                            [ngClass]=" { 'sender': message.senderId === currentUser.uid}">
+                        <div class="chat-bubble">
+                                {{ message.text }}
+                                <span class="chat-date">
+                                    {{ message.sentDate | dateDisplay }}    
+                                </span>
+                        </div>
+                    </div>
+                    <div  #endOfChat></div>
+                </ng-container>
+             </div>
+             <div class="input-area">
+                <mat-form-field appearance="outline">   
+                    <input [formControl]='messageControl' matInput placeholder="Enter your messages.. " (keydown.enter)="sendMessage()" />
+                    <button mat-icon-button matSuffix (click)="sendMessage()">
+                        <mat-icon>send</mat-icon>
+                    </button>
+                </mat-form-field>
+             </div>
     </div>
 </div>
